# avery

./: .gitignore  .gitmodules  .travis.yml  README.md  Rakefile  appveyor.yml  rustfmt.toml
emu/hda/: Loader.efi  startup.nsh
kernel/: Cargo.toml  console.rs  cpu.rs  kernel.rs  params.rs  process.rs  util.rs
kernel/allocator/: Cargo.toml  lib.rs
kernel/arch/x64/: acpi.rs  apic.rs  apic.s  cpu.rs  cpu.s  dwarf.rs  interrupts.rs  io_apic.rs  kernel.ld  memory.rs  memory.s  mod.rs  pit.rs  segments.rs  segments.s  serial.rs  stack.s  symbols.rs  vga.rs
kernel/arch/x64/multiboot/: Cargo.toml  bootstrap.rs  bootstrap.s  mod.rs  multiboot.rs
kernel/memory/: allocator.rs  initial.rs  mod.rs  physical.rs  rust.rs
kernel/spin/: mod.rs  mutex.rs
kernel/std/: Cargo.toml  std.rs
notes/: ASYNC.txt  ASYNC2.txt  Caps.md  Caps.rs  DWARF Decoding.txt  IPC.txt  Ideas.txt  Misc.txt  Verifier.txt  println for downstream crates.txt
notes/newcaps/: BushelsCaps.txt  Stateful.txt
rake/: build.rb  deps.rb  lokar.rb
src/: console.rs  cpu.rs  kernel.rs  params.rs  util.rs
src/arch/x64/: acpi.rs  apic.rs  apic.s  cpu.S  cpu.rs  cpu.s  dwarf.rs  interrupts.rs  interrupts.s  io_apic.rs  kernel.ld  memory.rs  memory.s  mod.rs  pit.rs  segments.rs  serial.rs  symbols.rs  vga.rs
src/arch/x64/efi/: boot.s  mod.rs
src/arch/x64/multiboot/: bootstrap.S  bootstrap.rs  bootstrap.s  mod.rs  mod.s  multiboot.rs
src/memory/: allocator.rs  initial.rs  mod.rs  physical.rs
src/spin/: mutex.rs
src/std/: lib.rs  native.rs  std.rs
sysroot/: Cargo.toml
targets/: x86_32-avery-kernel.json  x86_64-avery-kernel.json
user/: Cargo.toml  test.rs
user/hello/: Cargo.toml  hello.c
util/rlib_ir/: Cargo.toml
util/rlib_ir/src/: main.rs
verifier/: Cargo.toml  reduce-cmd.sh  reduce.sh  x86_opcodes.rs
verifier/capstone/: capstone.rs
verifier/src/: all.rs  build.rs  cases.rs  decoder.rs  disasm.rs  effect.rs  main.rs  rnd.rs  rustgen.rs  table.rs  tablegen.rs  verify.rs  x86_decoder.rs  x86_opcodes.rs
