[package]
name = "avery"
version = "0.1.0"

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", rev = "b14114f2537b06731b3be4ecbeea1e4c47d3eb12" }
rlibc = "0.1.5"
elfloader = { path = "../verifier/rust-elfloader" }
assembly = { path = "../vendor/asm" }
std = { path = "std" }
allocator = { path = "allocator" }
