[package]
name = "avery"
version = "0.1.0"

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", rev = "ce3be22021aa2aba6b9b5aa7247b8fe14e21aca8" }
rlibc = "0.1.5"
elfloader = { path = "../verifier/rust-elfloader" }
assembly = { path = "../vendor/asm" }
std = { path = "std" }
allocator = { path = "allocator" }
