[package]
name = "avery"
version = "0.1.0"

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", rev = "0475eae1fa518dbd2f11f870b69507fe13dabe41" }
rlibc = "0.1.5"
elfloader = { path = "../verifier/rust-elfloader" }
assembly = { path = "../vendor/asm" }
std = { path = "std" }
allocator = { path = "allocator" }
