[package]
name = "verifier"
version = "0.1.0"
authors = ["John Kåre Alsaker <john.kare.alsaker@gmail.com>"]

[dependencies]
byteorder = "0.4.2"
rustc-serialize = "0.3.18"
rand = "*"

[dependencies.elfloader]
path = "rust-elfloader"

[dev-dependencies]
quickcheck = "0.2"
quickcheck_macros = "0.2"

[[bin]]
name = "cases"
path = "src/cases.rs"

[[bin]]
name = "dump"
path = "src/main.rs"

[[bin]]
name = "compare"
path = "src/all.rs"

[[bin]]
name = "rnd"
path = "src/rnd.rs"