[package]
name = "bootstrap"
version = "0.1.0"

[lib]
path = "bootstrap.rs"
crate-type = ["staticlib"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", rev = "b14114f2537b06731b3be4ecbeea1e4c47d3eb12" }
rlibc = "0.1.5"
assembly = { path = "../../../../vendor/asm" }
