[package]
name = "bootstrap"
version = "0.1.0"

[lib]
path = "bootstrap.rs"
crate-type = ["staticlib"]

[dependencies]
clippy = { git = "https://github.com/Manishearth/rust-clippy.git", rev = "0475eae1fa518dbd2f11f870b69507fe13dabe41" }
rlibc = "0.1.5"
assembly = { path = "../../../../vendor/asm" }
